--- a/fonts.html
+++ b/fonts.html
@@ -39,7 +39,7 @@
       			<a href="elements.html">Elements</a>
       			<a href="images.html">Images</a>
       			<a href="html-common-mistakes.html">Common Mistakes</a>
-      			<a href="">4</a>
+      			<a href="forms.html">Forms</a>
       			<a href="">5</a>
       			<a href="">6</a>
       		</div>
