--- a/color.html
+++ b/color.html
@@ -47,6 +47,7 @@
 				<div class="dropdown">
       		<button class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
+            <a href="whats-new-html5.html">What's New</a>
       			<a href="updated-tags.html">Updated Tags</a>
       			<a href="updated-elements.html">Updated Elements</a>
       			<a href="new-elements.html">New Elements</a>
@@ -69,7 +70,7 @@
       	<div class="dropdown">
       		<button class="dropbtn">CSS3<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="">1</a>
+      			<a href="whats-new-css3.html">What's New</a>
       			<a href="">2</a>
       			<a href="">3</a>
       			<a href="">4</a>
