Add styles.html, remove whats-new-css3.html, remove CSS3 navigation item

--- a/forms.html
+++ b/forms.html
@@ -47,7 +47,7 @@
         <div class="dropdown">
           <button class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
           <div class="dropdown-content">
-            <a href="whats-new-html5.html">What's New</a>
+            <a href="whats-new.html">What's New</a>
             <a href="updated-tags.html">Updated Tags</a>
             <a href="updated-elements.html">Updated Elements</a>
             <a href="new-elements.html">New Elements</a>
@@ -63,18 +63,7 @@
             <a href="color.html">Color</a>
             <a href="box-model.html">Box Model</a>
             <a href="fonts.html">Fonts</a>
-            <a href="">5</a>
-            <a href="">6</a>
-          </div>
-        </div>
-        <div class="dropdown">
-          <button class="dropbtn">CSS3<span class="arrow">&#9660;</span></button>
-          <div class="dropdown-content">
-            <a href="whats-new-css3.html">What's New</a>
-            <a href="">2</a>
-            <a href="">3</a>
-            <a href="">4</a>
-            <a href="">5</a>
+            <a href="styles.html">Styles</a>
             <a href="">6</a>
           </div>
         </div>
