--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
 				<div class="dropdown">
       		<button class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="whats-new-html5.html">What's New</a>
+      			<a href="whats-new.html">What's New</a>
       			<a href="updated-tags.html">Updated Tags</a>
       			<a href="updated-elements.html">Updated Elements</a>
       			<a href="new-elements.html">New Elements</a>
@@ -63,18 +63,7 @@
       			<a href="color.html">Color</a>
       			<a href="box-model.html">Box Model</a>
       			<a href="fonts.html">Fonts</a>
-      			<a href="">5</a>
-      			<a href="">6</a>
-      		</div>
-      	</div>
-      	<div class="dropdown">
-      		<button class="dropbtn">CSS3<span class="arrow">&#9660;</span></button>
-      		<div class="dropdown-content">
-      			<a href="whats-new-css3.html">What's New</a>
-      			<a href="">2</a>
-      			<a href="">3</a>
-      			<a href="">4</a>
-      			<a href="">5</a>
+      			<a href="styles.html">Styles</a>
       			<a href="">6</a>
       		</div>
       	</div>
@@ -105,51 +94,7 @@
 					</div>
 				</header>
 				<section>
-					<h3>Improved Element Semantics</h3>
-					<h4>Description</h4>
-					<p>
-						HTML5 provides better-defined semantic roles for existing elements 
-						and adds new elements with useful semantics. Therefore the use of
-						&lt;div&gt; elements is kept at minimum, making the page a bit more 
-						semantic, but more importantly, easier to read.
-					</p>
 				</section>
-				<section>
-					<h3>Web Application Features</h3>
-					<h4>Description</h4>
-					<p>
-						Features that previously were only availbale through JS have been 
-						added directly to HTML5, such as &lt;canvas&gt;, &lt;video&gt;, and 
-						&lt;audio&gt;. Local storage and new input types for which the browser 
-						can expose easy user interfaces (no JS code required) have also been
-						added. HTML5 also allows JS and browser interface to run in separate 
-						threads. Furthermore unlike its predecessor, HTML5 made it extremely
-						easy to get the user's location. These and other features made the 
-						process of developing web applications simpler and faster.     
-					</p>
-				</section>	
-				<section>
-					<h3>Consistency in Handling Malformed Documents</h3>
-					<h4>Description</h4>
-					<p>
-						HTML supports "tag soup"(e.g. &lt;p&gt;This is a malformed fragment of
-						&lt;em&gt;HTML.&lt;/p&gt;&lt;/em&gt;) or the ability to write malformed 
-						code that is syntactically or structurally incorrect. Prior to 
-						HTML5, there was no standard way to correct malformed code in order 
-						to be displayed correclty in the browser. Before, new browser 
-						developers had to test malformed documents in various browsers and 
-						reverse engineer their error-handling. Fortunately, HTML5 
-						acknowledges that badly formed HTML code already exists in large 
-						quantities and will probably continue to be used and describes 
-						exactly how "badly formed code" should be treated. In other words,
-						the handling of badly formed code now has a place in the 
-						specification itself.
-					</p>
-				</section>
-				<p>
-					source:http://stackoverflow.com/questions/134727/whats-the-key-difference-between-html-4-and-html-5<br>
-					https://en.wikipedia.org/wiki/Tag_soup
-				</p>
 			</article>
 		</main>
 		<footer>
